--- a/.github/workflows/issue-metrics.yml
+++ b/.github/workflows/issue-metrics.yml
@@ -26,11 +26,12 @@ jobs:
         echo "$first_day..$last_day"
         echo "last_month=$first_day..$last_day" >> "$GITHUB_ENV"
 
+        echo "repo=$GITHUB_REPOSITORY" >> "$GITHUB_ENV"
     - name: Run issue-metrics tool
       uses: github/issue-metrics@v2
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SEARCH_QUERY: 'repo:${{ GITHUB_REPOSITORY }} is:pr created:${{ env.last_month }} -reason:"not planned"'
+        SEARCH_QUERY: 'repo:${{ env.repo }} is:pr created:${{ env.last_month }} -reason:"not planned"'
 
     - name: Create issue
       uses: peter-evans/create-issue-from-file@v5
